Revision history Bot::BasicBot

{{$NEXT}}

0.85  Fri Apr 1 18:49:45 GMT 2011
  - Document the 'no_run' attribute and add a getter/setter for it
  - Added a pocoirc() method which returns the underlying pocoirc object
  - Switched the backend from POE::Component::IRC to P::C::I::State
  - Print a warning and shut down if our session gets an exception
  - Document the channel_data() method
  - Depend on POE::Component::IRC 6.55 for a NAMES-related bugfix

0.84  Mon Nov 15 20:05:09 GMT 2010
  - Ignore empty strings returned by said()
  - Adjust the method documentation a bit to avoid confusion
  - Added the notice() method to send IRC notices.
    Useful when implementing bots.

0.83  Fri Nov 5 12:40:00 CET 2010
  - Applied patch from Mario Domgörgen to use log() for warnings (RT #51804)
  - Only ignore said() when it returns undef/empty list, not false
  - got_names was never getting called. Fixed that.
  - Skip connect.t for now. I should rewrite it to use poco-server-irc...

0.82  Wed Nov 3 02:09:36 GMT 2010
  - Maintainership moved from cpan:TOMI to cpan:HINRIK
  - Use POE::Component::IRC's Connector plugin to handle reconnects. This
    fixes the endless reconnect loop when trying to shut down the bot
  - Kill subprocesses (e.g. those created by forkit()) on shutdown
  - Migrate distribution to Dist::Zilla
  - Eliminate bogus "NAMES HASH(0x1234567)" queries the bot was making after
    joining a channel

0.81 2009/01/26
  - Implement remove_from_all_channels, you idiot. Sigh.

0.80 2009/01/22
  - Understand quit messages - https://rt.cpan.org/Ticket/Display.html?id=42625
  - Fix the ->name method on the bot to actually return something sensible - https://rt.cpan.org/Ticket/Display.html?id=27427
  - Try to avoid zombie children on forking - https://rt.cpan.org/Public/Bug/Display.html?id=38010

0.70 2006/06/11
  - Updates for new PoDo::IRC
  - No longer do 2 server connects on startup
  - the connect test doesn't break itself by faking a connection first
