@@ -15,5 +15,5 @@ git_tag_message    = CPAN release %v
 no_AutoPrereq      = 1
 
 [Prereqs / Runtime]
-POE::Component::IRC = 6.55
+POE::Component::IRC = 6.56
 Text::Wrap          = 0
