@@ -119,6 +119,7 @@ sub run {
                 irc_msg          => "irc_said_state",
                 irc_public       => "irc_said_state",
                 irc_ctcp_action  => "irc_emoted_state",
+                irc_notice       => "irc_noticed_state",
 
                 irc_disconnected => "irc_disconnected_state",
                 irc_error        => "irc_error_state",
@@ -246,6 +247,16 @@ C<emoted> receives the same data hash as C<said>.
 =cut
 
 sub emoted {
+    return shift->said(@_);
+}
+
+=head2 noticed
+
+This is like C<said>, except for notices instead of normal messages.
+
+=cut
+
+sub noticed {
     return shift->said(@_);
 }
 
@@ -1112,6 +1123,11 @@ sub irc_said_state {
 
 sub irc_emoted_state {
     irc_received_state( 'emoted', 'emote', @_ );
+    return;
+}
+
+sub irc_noticed_state {
+    irc_received_state( 'noticed', 'emote', @_ );
     return;
 }
 
